Fixed issue on mobile where an extra border rendered around the input field.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -283,6 +283,7 @@ li {
   text-align: center;
   font-size: xx-large;
   padding-left: 3px;
+  border: none;
   border-style: solid;
   border-color: black;
   border-width: var(--inputfield-border-width);
